testsuite/escript/classes/fail-self-base.err
fail-self-base.src:4:14: error: Class 'Animal' references itself as a base class.